fix play info too long with adding animation

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -72,22 +72,23 @@ li {
 
 .userInfo {
   width: 200px;
+  margin-left: -20px;
   height: 35px;
   line-height: 40px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   cursor: pointer;
 }
 .userInfo span {
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 40px;
 }
 .userInfo img {
-  width: 30px;
-  height: 30px;
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
-  margin-left: 25px;
+  margin-left: 15px;
   box-shadow: 0px 0px 4px 0px #121212;
 }
 
