--- a/app/components/Choice.styl
+++ b/app/components/Choice.styl
@@ -79,8 +79,8 @@
   position absolute
   width 40px
   height 40px
-  margin-left calc(50% + 285px - 4px)
-  margin-top 80px
+  margin-top 5px
+  margin-left 4px
   &:hover
     cursor pointer
     .crossOne
