--- a/app/components/PlayInfo.styl
+++ b/app/components/PlayInfo.styl
@@ -24,20 +24,28 @@
 
 .songName
   font-size 1.2rem
-  width 100%
+  width calc(100% - 70px)
   height 30px
   line-height 30px
-  padding-left 35px
+  margin-left 35px
   margin-top 5px
+  overflow hidden
   color #FEFEFE
+  span
+    white-space pre
+    cursor default
 
 .albumName, .singerName
   font-size .9rem
-  width 100%
+  width calc(100% - 70px)
   height 20px
   line-height 20px
-  padding-left 35px
+  margin-left 35px
   color #DADADA
+  span
+    white-space pre
+    cursor default
+
 
 .members
   width 250px
@@ -49,14 +57,16 @@
 
 .leaveRoom
   color white
-  width calc(100% + 1px)
-  height 50px
+  height 70px
   display flex
-  justify-content space-around
   align-items center
-  transition background-color .2s .2s ease, opacity .2s ease
+  span
+    font-size 1.2rem
+    &:before
+      content '\f08b'
+      font-family FontAwesome
+      font-size 2rem
+
   &:hover
     background-color #263551
-    opacity .8
     cursor pointer
-    transition background-color .2s .2s ease, opacity .2s ease
