--- a/app/components/RoomMenu.styl
+++ b/app/components/RoomMenu.styl
@@ -48,10 +48,16 @@
   flex-wrap wrap
 
 .roomAdd
-  position absolute
-  width 40px
-  height 40px
-  margin-top 12.5px
-  margin-left calc(50vw - 163.5px)
-  color #FEFEFE
+  width 230px
+  height 260px
+  background-color #303639
+  margin-left 58px
+  margin-right 58px
+  margin-top 30px
   cursor pointer
+  text-align center
+  i
+    tranform rotate(180deg)
+  span
+    color #FEFEFE
+    font 1.4rem
